<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/gestures">

        <PreferenceScreen
                android:key="screen_gestures"
                android:summary="@string/gestures_dashboard_summary"
                android:icon="@drawable/ic_settings_gestures"
                android:title="@string/screen_off_gestures" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="doze"
                android:summary="@string/ambient_display_gestures_summary"
                android:icon="@drawable/ic_ambient"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/vibrator_intensity_control">

        <org.aospextended.device.vibration.VibratorStrengthPreference
	    android:key="vib_strength"
            android:icon="@drawable/ic_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
      android:key="boost"
      android:title="@string/boost_title" >

      <org.aospextended.device.device.preferences.SecureSettingListPreference
          android:key="gpuboost"
          android:dialogTitle="@string/gpuboost_dialogTitle"
          android:entries="@array/gpuboost_profiles"
          android:entryValues="@array/gpuboost_values"
          android:icon="@drawable/ic_gpuboost"
          android:defaultValue="0"
          android:title="@string/gpuboost_title" />

      <org.aospextended.device.device.preferences.SecureSettingListPreference
          android:key="cpuboost"
          android:dialogTitle="@string/cpuboost_dialogTitle"
          android:entries="@array/cpuboost_profiles"
          android:entryValues="@array/cpuboost_values"
          android:icon="@drawable/ic_cpuboost"
          android:defaultValue="0"
          android:title="@string/cpuboost_title" />

    </PreferenceCategory>
    <PreferenceCategory
      android:key="batterysaver"
      android:title="@string/batterysaver_title" >

      <SwitchPreference
          android:key="battery_saver"
          android:defaultValue="false"
          android:disableDependentsState="true"
          android:title="@string/battery_saver_title"
          android:icon="@drawable/ic_batterysaver"
          android:summary="@string/battery_saver_summary" />

    </PreferenceCategory>
</PreferenceScreen>
